<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowAlarm">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="340dp"
        android:layout_height="542dp"
        android:background="@drawable/border_image"
        android:scaleType="fitCenter"
        android:src="@drawable/es"
        app:layout_constraintTop_toBottomOf="@+id/textView10TextAlarm"
        tools:layout_editor_absoluteX="35dp" />

    <TextView
        android:id="@+id/textViewTitlePosponer"
        android:layout_width="186dp"
        android:layout_height="26dp"
        android:layout_marginTop="28dp"
        android:text="@string/postpone_switch_form"
        android:textColor="@color/primaryVariantColor"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/switch2"
        app:layout_constraintHorizontal_bias="0.587"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textViewDescription" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="73dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:checked="true"
        android:scaleX="1.4"
        android:scaleY="1.4"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textViewDescription" />

    <ImageView
        android:id="@+id/imageViewDesactivate"
        android:layout_width="76dp"
        android:layout_height="118dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/desactivar"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitlePosponer" />

    <TextView
        android:id="@+id/textView10TextAlarmDesactivate"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/textDesactivar"
        android:textColor="@color/secondaryColor"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="165dp" />

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/baloo"
        android:gravity="center"
        android:shadowColor="@color/primaryVariantColor"
        android:text="@string/description_card"
        android:textColor="@color/primaryVariantColor"
        android:textSize="28dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCar"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:shadowColor="@color/primaryVariantColor"
        android:text="@string/date_card"
        android:textColor="@color/primaryVariantColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/textViewSoat"
        tools:layout_editor_absoluteX="257dp" />

    <TextView
        android:id="@+id/textViewPlate"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/baloo"
        android:gravity="center"
        android:shadowColor="@color/primaryVariantColor"
        android:text="@string/plate_card"
        android:textColor="@color/primaryVariantColor"
        android:textSize="28dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="207dp" />

    <ImageView
        android:id="@+id/clockIconImageTextLogo"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:contentDescription="@string/image_card"
        android:src="@drawable/ic_icon_clock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameAppTextViewTitle" />

    <TextView
        android:id="@+id/nameAppTextViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo"
        android:text="@string/app_name"
        android:textColor="@color/primaryVariantColor"
        android:textSize="35sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView10TextAlarm"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/alarma"
        android:textColor="@color/secondaryColor"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clockIconImageTextLogo"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewSoat"
        android:layout_height="37dp"
        android:layout_marginStart="156dp"
        android:shadowColor="@color/primaryVariantColor"
        android:text="@string/name_Soat"
        android:textColor="@color/primaryVariantColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textViewPlate"
        tools:layout_editor_absoluteY="207dp" />

    <ImageView
        android:id="@+id/imageViewCar"
        android:layout_width="230dp"
        android:layout_height="170dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/si2"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textViewDate" />

</androidx.constraintlayout.widget.ConstraintLayout>