<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addAlarmFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/add_button_home"
        android:scaleX="1"
        android:scaleY="1"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/primaryColor"
        app:backgroundTintMode="add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="@color/whiteColor"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/clockIconImageText"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/image_card"
        android:src="@drawable/ic_icon_clock"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <TextView
        android:id="@+id/nameAppTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/app_name"
        android:textColor="@color/primaryVariantColor"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toEndOf="@+id/clockIconImageText"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:id="@+id/card1"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/whiteColor"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="167dp"
                android:layout_margin="10dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:shadowColor="@color/primaryVariantColor"
                    android:text="@string/plate_card"
                    android:textColor="@color/primaryVariantColor"
                    android:textSize="26dp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/si2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="171dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:text="@string/category_card"
                    android:textAlignment="textEnd"
                    android:textColor="@color/secondaryVariantColor"
                    android:textSize="22dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:shadowColor="@color/primaryVariantColor"
                    android:text="@string/date_card"
                    android:textAlignment="textEnd"
                    android:textColor="@color/primaryVariantColor"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:shadowColor="@color/primaryVariantColor"
                    android:text="@string/time_card"
                    android:textAlignment="textEnd"
                    android:textColor="@color/primaryVariantColor"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/cancelButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="0dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="@color/whiteColor"
                    android:text="@string/button_card"
                    android:textColor="@color/primaryColor"
                    app:cornerRadius="5dp"
                    app:strokeColor="@color/primaryColor"
                    app:strokeWidth="2dp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="167dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:shadowColor="@color/primaryVariantColor"
                    android:text="@string/plate_card"
                    android:textColor="@color/primaryVariantColor"
                    android:textSize="26dp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/si2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="171dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:text="@string/category_card"
                    android:textAlignment="textEnd"
                    android:textColor="@color/secondaryVariantColor"
                    android:textSize="22dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:shadowColor="@color/primaryVariantColor"
                    android:text="@string/date_card"
                    android:textAlignment="textEnd"
                    android:textColor="@color/primaryVariantColor"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:shadowColor="@color/primaryVariantColor"
                    android:text="@string/time_card"
                    android:textAlignment="textEnd"
                    android:textColor="@color/primaryVariantColor"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/cancelButton21"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="0dp"
                    android:backgroundTint="@color/whiteColor"
                    android:text="@string/button_card"
                    android:textColor="@color/primaryColor"
                    app:cornerRadius="5dp"
                    app:strokeColor="@color/primaryColor"
                    app:strokeWidth="2dp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>